Guardamos la info en la base de datos

--- a/public/views/list.html
+++ b/public/views/list.html
@@ -11,9 +11,9 @@
 	</thead>
 	<tbody>
 	  <tr ng-repeat="item in list">
-	    <td>{{item.id}}</td>
-	    <td>{{item.nurl}}</td>
-	    <td>{{item.surl}}</td>
+	    <td>{{item.idUrl}}</td>
+	    <td>{{item.NormalUrl}}</td>
+	    <td>{{item.ShortUrl}}</td>
 	  </tr>
 	</tbody>
 </table>
